--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
 
 <body>
     <!-- why tf cant it scroll -->
-    <div class="bg"></div>
+    <div class="bg">
+        <div><button type="button" class="btn btn-dark btn-lg btn-start">Begin Exploring</button></div>
+        <div class="bg-text">TEYVAT</div>
+    </div>
     <!-- why is it only horizontally centered??? -->
-    <div><button type="button" class="btn btn-dark btn-lg btn-start">Begin Exploring</button></div>
-    <div class="bg-text">TEYVAT</div>
+    
 
 </body>
 
