button change to map to next page

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
     <!-- why tf cant it scroll -->
     <div class="bg">
-        <div><button type="button" class="btn btn-dark btn-lg btn-start">Begin Exploring</button></div>
-        <div class="bg-text">TEYVAT</div>
+        <div> <a href="actualMap.html" class="btn btn-dark btn-lg btn-start">Begin Exploring</a>
+        <div class="bg-text" >TEYVAT</div>
     </div>
     <!-- why is it only horizontally centered??? -->
     
