--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 </head>
 
 <body>
-    <!-- why tf cant it scroll -->
-    <div class="bg">
+
+    <div class="bg-main">
         <div> <a href="actualMap.html" class="btn btn-dark btn-lg btn-start">Begin Exploring</a>
         <div class="bg-text" >TEYVAT</div>
     </div>
-    <!-- why is it only horizontally centered??? -->
+
     
 
 </body>
