vertical scroll fix

--- a/actualMap.html
+++ b/actualMap.html
@@ -42,15 +42,15 @@
       </div>
     </nav> -->
     <div>
-      <img style="height: 100vw;
+      <img style="
       background-position: center;
       background-repeat: no-repeat;
       background-size: fit;" id="zoom" src="images/teyvatmap.png" alt="Teyvat" />
     </div>
 
 
-    <div> <a href="actualMap.html" class="btn btn-dark btn-lg btn-1">Begin Exploring</a>
-    </div>
+    <!-- <div> <a href="actualMap.html" class="btn btn-dark btn-lg btn-1">Begin Exploring</a>
+    </div> -->
   </div>
 
   <!-- <script src="scripts/wheelzoom.js"></script>
