--- a/teyvat.html
+++ b/teyvat.html
@@ -9,7 +9,7 @@
   <meta name="author" content="George Cao and Daniel Zhao">
   <meta name="description" content="Bouldering stuffs">
   <meta name="keywords" content="Bouldering 101 Crash Course">
-  <!-- <link rel="stylesheet" href="styles/main.css"> -->
+  <link rel="stylesheet/less" type="text/css" href="styles/styles.less" />
   <link rel="stylesheet/less" type="text/css" href="styles/map.less" />
   <script src="https://cdn.jsdelivr.net/npm/less@4"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -32,15 +32,33 @@
 
 
   <div>
-    <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">TEYVAT MAP</a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link active" href="index.html">Test</a>
+            <a class="nav-link active" href="teyvat.html">Teyvat</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Enkanomiya</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Three Realms Gateway</a>
           </li>
         </ul>
       </div>
-    </nav> -->
+      <span id="profile" class="nav-item">
+        <a class="nav-link" href="profile.html">
+          <div class="d-flex align-items-center">
+            <span class="font-weight-bold">
+              My Page
+            </span>
+            <img class="rounded-circle"
+              src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+          </div>
+        </a>
+      </span>
+    </nav>
     <div>
       <img style="
       background-position: center;
