update navbar on profile

--- a/profile.html
+++ b/profile.html
@@ -17,7 +17,34 @@
     <title>actualGenshinmap</title>
 </head>
 
-<body style="margin: 50px;">
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">TEYVAT MAP</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link active" href="teyvat.html">Teyvat</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Enkanomiya</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Three Realms Gateway</a>
+                </li>
+            </ul>
+        </div>
+        <span id="profile" class="nav-item">
+            <a class="nav-link" href="profile.html">
+                <div class="d-flex align-items-center">
+                    <span class="font-weight-bold">
+                        My Page
+                    </span>
+                    <img class="rounded-circle"
+                        src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+                </div>
+            </a>
+        </span>
+    </nav>
     <div class="container rounded bg-white mt-5 mb-5">
         <div class="row">
             <div class="col-md-3 border-right">
