--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <div class="bg-main">
     <div> 
-      <a href="actualMap.html" class="btn btn-dark btn-lg btn-start">Begin Exploring</a>
+      <a href="teyvat.html" class="btn btn-dark btn-lg btn-start">Begin Exploring</a>
       <div class="bg-text">TEYVAT</div>
     </div>
   </div>
