--- a/profile.html
+++ b/profile.html
@@ -22,8 +22,8 @@
         <a class="navbar-brand" href="#">TEYVAT MAP</a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link active" href="teyvat.html">Teyvat</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="teyvat.html">Teyvat</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Enkanomiya</a>
@@ -33,10 +33,10 @@
                 </li>
             </ul>
         </div>
-        <span id="profile" class="nav-item">
-            <a class="nav-link" href="profile.html">
+        <span id="profile" class="nav-item active">
+            <a class="nav-link active" href="profile.html">
                 <div class="d-flex align-items-center">
-                    <span class="font-weight-bold">
+                    <span class="font-weight-bold active">
                         My Page
                     </span>
                     <img class="rounded-circle"
