--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">TEYVAT MAP</a>
+        <a class="navbar-brand" href="teyvat.html">TEYVAT MAP</a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
