--- a/teyvat.html
+++ b/teyvat.html
@@ -32,33 +32,48 @@
 
 
   <div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">TEYVAT MAP</a>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link active" href="teyvat.html">Teyvat</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Enkanomiya</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Three Realms Gateway</a>
-          </li>
-        </ul>
-      </div>
-      <span id="profile" class="nav-item">
-        <a class="nav-link" href="profile.html">
-          <div class="d-flex align-items-center">
-            <span class="font-weight-bold">
-              My Page
-            </span>
-            <img class="rounded-circle"
-              src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
-          </div>
-        </a>
-      </span>
-    </nav>
+    <div class="pos-f-t">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <button class="navbar-toggler ml-1" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand ml-1" href="#">TEYVAT MAP</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav w-100">
+            <li class="nav-item dropdown active">
+              <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Teyvat
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="#">Mondstadt</a>
+                <a class="dropdown-item" href="#">Liyue</a>
+                <a class="dropdown-item" href="#">Inazuma</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Enkanomiya</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Three Realms Gateway</a>
+            </li>
+            <li id="profile" class="nav-item">
+              <a class="nav-link" href="profile.html">
+                <div class="d-flex align-items-center">
+                  <span>
+                    My Page
+                  </span>
+                  <img class="rounded-circle"
+                    src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+      </nav>
+    </div>
     <div>
       <img style="
       background-position: center;
