--- a/teyvat.html
+++ b/teyvat.html
@@ -30,7 +30,7 @@
     
     </div>-->
 
-    <div>
+    <div id="map">
       <div class="pos-f-t">
         <nav style="z-index: 1;" class="navbar navbar-expand-lg navbar-dark bg-dark">
           <button class="navbar-toggler ml-1" type="button" data-toggle="collapse" data-target="#navbarNav"
