nation icon sizing

--- a/teyvat.html
+++ b/teyvat.html
@@ -45,21 +45,21 @@
                   aria-haspopup="true" aria-expanded="false">
                   Teyvat
                 </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <ul id="teyvatDropdown" class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="#">
-                          <img src="images/Elements/Anemo.png" width="25vw" height="25vh">
+                          <img src="images/Elements/Anemo.png">
                           Mondstadt
-                          <img src="images/RegionIcons/Mondstadt.png" width="25vw" height="25vh">
+                          <img src="images/RegionIcons/Mondstadt.png">
                       </a></li>
                   <li><a class="dropdown-item" href="#">
-                          <img src="images/Elements/Geo.png" width="25vw" height="25vh">
+                          <img src="images/Elements/Geo.png">
                           Liyue
-                          <img src="images/RegionIcons/Liyue.png" width="25vw" height="25vh">
+                          <img src="images/RegionIcons/Liyue.png">
                       </a></li>
                   <li><a class="dropdown-item" href="#">
-                          <img src="images/Elements/Electro.png" width="25vw" height="25vh">
+                          <img src="images/Elements/Electro.png">
                           Inazuma
-                          <img src="images/RegionIcons/Inazuma.png" width="25vw" height="25vh">
+                          <img src="images/RegionIcons/Inazuma.png">
                       </a></li>
               </ul>
               </li>
