navbar and map fixes

--- a/teyvat.html
+++ b/teyvat.html
@@ -46,17 +46,17 @@
                   Teyvat
                 </a>
                 <ul id="teyvatDropdown" class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">
+                  <li><a class="dropdown-item" href="teyvat.html">
                           <img src="images/Elements/Anemo.png">
                           Mondstadt
                           <img src="images/RegionIcons/Mondstadt.png">
                       </a></li>
-                  <li><a class="dropdown-item" href="#">
+                  <li><a class="dropdown-item" href="teyvat.html">
                           <img src="images/Elements/Geo.png">
                           Liyue
                           <img src="images/RegionIcons/Liyue.png">
                       </a></li>
-                  <li><a class="dropdown-item" href="#">
+                  <li><a class="dropdown-item" href="teyvat.html">
                           <img src="images/Elements/Electro.png">
                           Inazuma
                           <img src="images/RegionIcons/Inazuma.png">
