--- a/profile.html
+++ b/profile.html
@@ -18,8 +18,9 @@
 </head>
 
 <body>
+
     <div class="pos-f-t">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav style="z-index: 1;" class="navbar navbar-expand-lg navbar-dark bg-dark">
             <button class="navbar-toggler ml-1" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -33,17 +34,17 @@
                             Teyvat
                         </a>
                         <ul id="teyvatDropdown" class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">
+                            <li><a class="dropdown-item" href="teyvat.html">
                                     <img src="images/Elements/Anemo.png">
                                     Mondstadt
                                     <img src="images/RegionIcons/Mondstadt.png">
                                 </a></li>
-                            <li><a class="dropdown-item" href="#">
+                            <li><a class="dropdown-item" href="teyvat.html">
                                     <img src="images/Elements/Geo.png">
                                     Liyue
                                     <img src="images/RegionIcons/Liyue.png">
                                 </a></li>
-                            <li><a class="dropdown-item" href="#">
+                            <li><a class="dropdown-item" href="teyvat.html">
                                     <img src="images/Elements/Electro.png">
                                     Inazuma
                                     <img src="images/RegionIcons/Inazuma.png">
@@ -73,6 +74,7 @@
         </nav>
 
     </div>
+
     <div class="container rounded bg-white mt-5 mb-5">
         <div class="row">
             <div class="col-md-3 border-right">
@@ -154,5 +156,14 @@
         </div>
 
     </div>
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
