--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
   <link rel="stylesheet/less" type="text/css" href="styles/styles.less" />
   <script src="https://cdn.jsdelivr.net/npm/less@4"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <title>genshinmap</title>
+  <title>Teyvationary</title>
 </head>
 
 <body>
 
   <div class="bg-main">
-    <div> 
-      <a href="teyvat.html" class="btn btn-dark btn-lg btn-start">Begin Exploring</a>
-      <div class="bg-text">TEYVAT</div>
+    <div>
+      <a href="teyvat.html" class="bg-text">
+
+        <h1>TEYVAT</h1>
+        <p>Begin Exploring</p>
+
+    </a>
     </div>
   </div>
 
