--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet/less" type="text/css" href="styles/profile.less" />
     <script src="https://cdn.jsdelivr.net/npm/less@4"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>actualGenshinmap</title>
+    <title>Teyvationary</title>
 </head>
 
 <body>
