--- a/teyvat.html
+++ b/teyvat.html
@@ -52,7 +52,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Enkanomiya</a>
+              <a class="nav-link" href="enkanomiya.html">Enkanomiya</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Three Realms Gateway</a>
