--- a/enkanomiya.html
+++ b/enkanomiya.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="author" content="George Cao and Daniel Zhao">
-    <meta name="description" content="Bouldering stuffs">
-    <meta name="keywords" content="Bouldering 101 Crash Course">
+    <meta name="description" content="Genshin Impact Archive">
+    <meta name="keywords" content="Genshin Impact World Map Lore Archive Items">
     <link rel="stylesheet/less" type="text/css" href="styles/styles.less" />
     <link rel="stylesheet/less" type="text/css" href="styles/map.less" />
     <script src="https://cdn.jsdelivr.net/npm/less@4"></script>
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav w-100">
                         <li class="nav-item dropdown active">
-                            <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink"
+                            <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Teyvat
                             </a>
