--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!-- https://cs4640.cs.virginia.edu/dz8pa/genshinmap -->
+
+<!-- Sources Used
+https://getbootstrap.com/docs/4.0/components/navbar/
+https://dev.to/stackfindover/zoom-image-point-with-mouse-wheel-11n3
+https://gist.github.com/prof3ssorSt3v3/946bf0ce9c8544e7795ce9962975d2f6 -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,9 +14,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta name="author" content="George Cao and Daniel Zhao">
-  <meta name="description" content="Bouldering stuffs">
-  <meta name="keywords" content="Bouldering 101 Crash Course">
-  <!-- <link rel="stylesheet" href="styles/main.css"> -->
+  <meta name="description" content="Genshin Impact Archive">
+  <meta name="keywords" content="Genshin Impact World Map Lore Archive Items">
   <link rel="stylesheet/less" type="text/css" href="styles/styles.less" />
   <script src="https://cdn.jsdelivr.net/npm/less@4"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -25,31 +31,21 @@
         <h1>TEYVAT</h1>
         <p>Begin Exploring</p>
 
-    </a>
+      </a>
     </div>
   </div>
 
 
-
-</body>
-
-
-
-
-
-
-
-
-
-
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
