--- a/profile.html
+++ b/profile.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="author" content="George Cao and Daniel Zhao">
-    <meta name="description" content="Bouldering stuffs">
-    <meta name="keywords" content="Bouldering 101 Crash Course">
-    <!-- <link rel="stylesheet" href="styles/main.css"> -->
+    <meta name="description" content="Genshin Impact Archive">
+    <meta name="keywords" content="Genshin Impact World Map Lore Archive Items">
     <link rel="stylesheet/less" type="text/css" href="styles/styles.less" />
     <link rel="stylesheet/less" type="text/css" href="styles/profile.less" />
+
     <script src="https://cdn.jsdelivr.net/npm/less@4"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Teyvationary</title>
@@ -85,6 +85,10 @@
                         alt="Profile picture">
                     <span class="font-weight-bold">
                         Andal
+                    </span>
+                    <span>
+                        <label>Change Username</label><input type="text" name="username" class="form-control" value=""
+                            placeholder="username">
                     </span>
                 </div>
             </div>
@@ -169,3 +173,5 @@
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
+</html>
