scuffed temp sidebar stuff

--- a/teyvat.html
+++ b/teyvat.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta name="author" content="George Cao and Daniel Zhao">
-  <meta name="description" content="Bouldering stuffs">
-  <meta name="keywords" content="Bouldering 101 Crash Course">
+  <meta name="description" content="Genshin Impact Archive">
+  <meta name="keywords" content="Genshin Impact World Map Lore Archive Items">
   <link rel="stylesheet/less" type="text/css" href="styles/styles.less" />
   <link rel="stylesheet/less" type="text/css" href="styles/map.less" />
   <script src="https://cdn.jsdelivr.net/npm/less@4"></script>
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav w-100">
             <li class="nav-item dropdown active">
-              <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+              <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 Teyvat
               </a>
@@ -52,7 +52,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Enkanomiya</a>
+              <a class="nav-link" href="enkanomiya.html">Enkanomiya</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Three Realms Gateway</a>
@@ -74,10 +74,7 @@
       </nav>
 
     </div>
-    <img style="
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: fit;" id="zoom" src="images/teyvatmap.png" alt="Teyvat" />
+    <img id="zoom" src="images/teyvatmap.png" alt="Teyvat" />
 
   </div>
 
