--- a/enkanomiya.html
+++ b/enkanomiya.html
@@ -28,8 +28,8 @@
                 <a class="navbar-brand ml-1" href="#">TEYVAT MAP</a>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav w-100">
-                        <li class="nav-item dropdown active">
-                            <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown"
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Teyvat
                             </a>
@@ -51,8 +51,8 @@
                                     </a></li>
                             </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="enkanomiya.html">Enkanomiya</a>
+                        <li class="nav-item active">
+                            <a class="nav-link active" href="enkanomiya.html">Enkanomiya</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Three Realms Gateway</a>
