--- a/teyvat.html
+++ b/teyvat.html
@@ -63,6 +63,7 @@
                   <span>
                     My Page
                   </span>
+
                   <img class="rounded-circle"
                     src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg" alt="Profile picture">
                 </div>
@@ -74,7 +75,15 @@
       </nav>
 
     </div>
-    <img id="zoom" src="images/teyvatmap.png" alt="Teyvat" />
+    <div id="zoom">
+      <ul class="region-buttons">
+        <li id="mondstadt-btn"><button><img src="images/RegionIcons/Mondstadt.png"/></button></li>
+        <li id="liyue-btn"><button><img src="images/RegionIcons/Liyue.png"/></button></li>
+        <li id="inazuma-btn"><button><img src="images/RegionIcons/Inazuma.png"/></button></li>
+      </ul>
+      <img id="zoom-img" src="images/teyvatmap.png" alt="Teyvat" />
+    </div>
+    
 
   </div>
 
