--- a/teyvat.html
+++ b/teyvat.html
@@ -74,7 +74,7 @@
         </div>
 
       </nav>
-      <nav id="sidebar">
+      <nav id="sidebar" class="active">
         <div class="sidebar-header">
             <h3>Bootstrap Sidebar</h3>
         </div>
@@ -138,17 +138,11 @@
 
     </div>
     <div id="zoom">
-      <ul class="region-buttons">
-        <button type="button" id="mondstadt-btn" class="btn buttonround">
-          <img src="images/RegionIcons/Mondstadt.png"/></button>
-
-        <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fas fa-align-justify"></i>
-        </button>
-        <!-- <li id="mondstadt-btn"><button><img src="images/RegionIcons/Mondstadt.png"/></button></li> -->
-        <li id="liyue-btn"><button><img src="images/RegionIcons/Liyue.png"/></button></li>
-        <li id="inazuma-btn"><button><img src="images/RegionIcons/Inazuma.png"/></button></li>
-      </ul>
+      <div id="region-buttons" class="region-buttons">
+        <button id="mondstadt-btn"><img src="images/RegionIcons/Mondstadt.png"/></button>
+        <button id="liyue-btn"><img src="images/RegionIcons/Liyue.png"/></button>
+        <button id="inazuma-btn"><img src="images/RegionIcons/Inazuma.png"/></button>
+      </div>
       <img id="zoom-img" src="images/teyvatmap.png" alt="Teyvat" />
     </div>
     
