fix iframe usage

--- a/teyvat.html
+++ b/teyvat.html
@@ -98,7 +98,7 @@
             <li>
                 <div id="overlay" onclick="off()">
                     <br>
-                    <iframe src="./profile.html" onload="this.width=screen.width;this.height=screen.height;"></iframe>
+                    <iframe src="./profile.html" onload="this.width=window.innerWidth*0.8;this.height=window.innerHeight*0.8;" class="mt-5"></iframe>
                 </div>
                 <div id="overlay"></div>
                                 
