--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ https://gist.github.com/prof3ssorSt3v3/946bf0ce9c8544e7795ce9962975d2f6 -->
 
   <div class="bg-main">
     <div>
-      <a href="teyvat.html" class="bg-text">
+      <a href="teyvat.php" class="bg-text">
 
         <h1>TEYVAT</h1>
         <p>Begin Exploring</p>
